Fix gap between content and trends for mob/tablet

--- a/styles.css
+++ b/styles.css
@@ -380,9 +380,6 @@ li:hover {
     }
 
 @media (max-width: 960px) {
-    .container {
-        grid-template-columns: 1fr 5fr;
-    }
 
     .welcome-message {
         display: inline;
@@ -406,6 +403,10 @@ li:hover {
         display: grid;
         grid-template-rows: 400px 400px;
     }
+
+    .announcements-card, .trending-card {
+        margin-top: 15px;
+    }
     
 }
 
@@ -413,6 +414,10 @@ li:hover {
     .content-side {
         display: grid;
         grid-template-rows: 400px 400px;
+    }
+
+    .announcements-card, .trending-card {
+        margin-top: 15px;
     }
 
     .sidebar > p {
